--- a/op-web/index.html
+++ b/op-web/index.html
@@ -1,3 +1,40 @@
+    // Simple toast helper (auto-dismiss, bottom-right)
+    function showToast(message, opts = {}) {
+      try {
+        const duration = opts.duration ?? 2000;
+        const containerId = 'toast-container';
+        let container = document.getElementById(containerId);
+        if (!container) {
+          container = document.createElement('div');
+          container.id = containerId;
+          container.style.position = 'fixed';
+          container.style.right = '12px';
+          container.style.bottom = '12px';
+          container.style.display = 'flex';
+          container.style.flexDirection = 'column';
+          container.style.gap = '8px';
+          container.style.zIndex = '9999';
+          document.body.appendChild(container);
+        }
+        const el = document.createElement('div');
+        el.textContent = message;
+        el.style.padding = '8px 12px';
+        el.style.background = 'rgba(0,0,0,0.85)';
+        el.style.color = '#fff';
+        el.style.borderRadius = '6px';
+        el.style.fontSize = '13px';
+        el.style.boxShadow = '0 2px 8px rgba(0,0,0,0.3)';
+        el.style.opacity = '0';
+        el.style.transition = 'opacity 150ms ease-out';
+        container.appendChild(el);
+        requestAnimationFrame(() => { el.style.opacity = '1'; });
+        setTimeout(() => {
+          el.style.opacity = '0';
+          setTimeout(() => { el.remove(); }, 200);
+        }, duration);
+      } catch {}
+    }
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -373,7 +410,7 @@
       };
       await upsertDataset(tid, 'matches', { matches, settings });
       document.getElementById('last-sync-label').textContent = '最終更新: ' + new Date().toLocaleString('ja-JP');
-      alert('クラウドに保存しました');
+      showToast('クラウドに保存しました');
     }
 
     // 管理者切替
