リーグシステムへデータ連携部分の反映

--- a/op-web/index.html
+++ b/op-web/index.html
@@ -193,6 +193,7 @@
   </script>
 
   <!-- アプリ既存スクリプト（相対参照：後でop-web配下にコピー予定） -->
+  <script src="../src/js/integrations/leagueWebhook.js?v=2025-10-31"></script>
   <script src="../src/js/matchDropStorage.js?v=2025-10-23-ingest2"></script>
   <script src="../src/js/local-storage.js?v=2025-10-23-ingest2"></script>
   <script src="../src/js/favicon.js?v=2025-10-23-ingest2"></script>
